<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Mini Net</string>
    <string name="profile_button">Your Profile Information</string>
    <string name="login_user_name">Name</string>
    <string name="login_password">Password</string>
    <string name="login_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="login_others">Log in with social network</string>
    <string name="list_of_results">List of Search Results</string>
    <string name="match_person_list">Check the box(es) beside the matched person(s)</string>
    <string name="see_profile_button">See Profile(s) of Matched Person(s)</string>
    <string name="add_friend_request">Add Friend Request</string>
    <string name="distance_measure_button">Distance Measurement</string>
    <string name="google_map_button">Get Directions from Google Map</string>
    <string name="login_status">Status</string>
    <string name="userinfo_confirm_password">CONFIRM PASSWORD</string>
    <string name="search_button">Start Searching!</string>
    <string name="main_menu_preference_selection">Preference</string>
    <string name="userinfo_personal_info">General Personal Information</string>
    <string name="userinfo_gender">GENDER</string>
    <string name="userinfo_name">NAME</string>
    <string name="main_menu_setting">Setting</string>
    <string name="userinfo_birthday">BIRTHDAY</string>
    <string name="userinfo_address">Address</string>
    <string name="userinfo_continue">Continue Registration</string>
    <string name="contacts_groups">Groups</string>
    <string name="contacts_black_list">Black List</string>
    <string name="userinfo_male">Male</string>
    <string name="userinfo_female">Female</string>
    <string name="userinfo_employer">Employer</string>
    <string name="userinfo_education">Education</string>
    <string name="userinfo_traits">Personal Traits</string>
    <string name="userinfo_email">E-MAIL</string>
    <string name="userinfo_interests">INTERESTS</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="setting_account">Account</string>
    <string name="setting_notification">Notification</string>
    <string name="setting_themes">Themes</string>
    <string name="setting_sync">Synchronization</string>
    <string name="setting_software_update">Software Update</string>
    <string name="setting_location_services">Location Services</string>
    <string name="setting_results_display">Results Display</string>
    <string name="setting_account_change_account">Change Account</string>
    <string name="setting_account_logout">Log out</string>
    <string name="setting_account_change_password">Change Password</string>
    <string name="setting_account_privacy_setting">Privacy Setting</string>
    <string name="setting_notification_notification">Notification</string>
    <string name="setting_notification_sound">Sound</string>
    <string name="setting_notification_vibrate">Vibrate</string>
    <string name="userinfo_location">Location</string>
    <string name="userinfo_employee_title">Employee Title</string>
    <string name="add_contact">Add to Contacts</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="locate_contact">Show Location</string>
    <string name="block_contact">Block Contact</string>
    <string name="unblock_contact">Unblock Contact</string>
    <string name="privacy_basic">Basic Information</string>
    <string name="privacy_detailed">Detailed Information</string>
    <string name="privacy_location">Location</string>
    <string name="privacy_level">Privacy Level</string>
    <string name="user_id">ID</string>
</resources>
